对于不同GC的总结